ecmascript/parser/tests/test262-error-references/fail/ea4d962dac83e2a1.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/ea4d962dac83e2a1.js:1:25
  |
1 | function *g(a, b, c, ...yield){}
  |                         ^^^^^

